--- a/views/user/partials/navbar.ejs
+++ b/views/user/partials/navbar.ejs
@@ -58,7 +58,7 @@
                 <i class="fas fa-user text-base"></i>
                 <span class="text-sm font-medium">My Profile</span>
               </a>
-              <a href="/orders"
+              <a href="/orderDetails"
                 class="flex items-center gap-2 px-4 py-2 text-gray-700 hover:bg-indigo-100 hover:text-indigo-700 transition rounded-md">
                 <i class="fas fa-shopping-bag text-base"></i>
                 <span class="text-sm font-medium">Orders</span>
